infra/kubes/starter-api-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  name: starter-api
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: starter-api
    spec:
      imagePullSecrets:
        - name: docker-hub
      containers:
      - env:
        - name: PORT
          value: "3000"
        - name: DB_HOST
          value: starter-couchdb
        - name: DB_PORT
          value: "5984"
        - name: DB_PROTOCOL
          value: http://
        - name: DB_USER
        - name: DB_PASSWORD
        image: index.docker.io/motion/starter-api:latest
        imagePullPolicy: Always
        name: starter-api
        ports:
        - containerPort: 3000
        resources: {}
      restartPolicy: Always
status: {}
