infra/kubes/starter-couchdb-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  name: starter-couchdb
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: starter-couchdb
    spec:
      containers:
      - env:
        - name: DB_USER
        - name: DB_PASSWORD
        image: klaemo/couchdb:latest
        name: starter-couchdb
        ports:
        - containerPort: 5984
        resources: {}
        volumeMounts:
        - mountPath: /usr/local/var/lib/couchdb
          name: starter-couchdb-claim0
      restartPolicy: Always
      volumes:
      - name: starter-couchdb-claim0
        persistentVolumeClaim:
          claimName: starter-couchdb-claim0
status: {}
