infra/kubes/couch.yml
apiVersion: v1
kind: Service
metadata:
  name: couchdb
  labels:
    run: couchdb
spec:
  ports:
  - port: 5984
    targetPort: 5984
  selector:
    run: couchdb
status:
  loadBalancer: {}
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: couchdb
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      labels:
        run: couchdb
    spec:
      containers:
      - name: couchdb
        image: klaemo/couchdb:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5984
        resources: {}
status: {}
