infra/kubes/public.yml
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      run: public
    name: public
  spec:
    ports:
    - name: "80"
      port: 80
      targetPort: 80
    selector:
      run: public
  status:
    loadBalancer: {}
---
- apiVersion: extensions/v1beta1
  kind: Deployment
  metadata:
    name: public
  spec:
    replicas: 1
    image: motion/starter-public
    imagePullPolicy: Never
    strategy:
      type: Recreate
    template:
      metadata:
        labels:
          run: public
      spec:
        containers:
        - name: public
          ports:
          - containerPort: 80
          resources: {}
        restartPolicy: Always
  status: {}
