infra/kubes/starter-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: starter-api
  creationTimestamp: null
  labels:
    io.kompose.service: starter-api
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 32099
  selector:
    io.kompose.service: starter-api
status:
  loadBalancer: {}
