infra/kubes/starter-couchdb-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: starter-couchdb
  name: starter-couchdb
spec:
  ports:
  - name: "5984"
    port: 5984
    targetPort: 5984
  selector:
    io.kompose.service: starter-couchdb
status:
  loadBalancer: {}
